--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,14 @@ body {
 .container-header-img {
   background-image: linear-gradient(
       90deg,
-      rgba(24, 24, 27, 0.9) 0%,
+      rgba(0, 0, 0, 0.9) 0%,
+      rgba(0, 0, 0, 0.7) 75%,
       rgba(0, 0, 0, 0.5) 100%
     ),
     url("/src/assets/images/containerHeaderImg.png");
   background-size: cover;
   background-position: center;
+}
+div {
+  cursor: default;
 }
