--- a/src/components/Header-Panel/header-panel.css
+++ b/src/components/Header-Panel/header-panel.css
@@ -16,3 +16,15 @@
 .items-button:hover::after {
   width: 100%;
 }
+
+.HeaderPanel {
+  opacity: 0;
+  transform: translateY(40px);
+  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    transform 0.7s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.HeaderPanel--visible {
+  opacity: 1;
+  transform: translateY(0);
+}
