--- a/src/components/Header-Panel/header-panel.css
+++ b/src/components/Header-Panel/header-panel.css
@@ -8,7 +8,7 @@
   top: 30px;
   left: 0;
   width: 0%;
-  background-color: #fff;
+  background-color: #ababab;
   position: absolute;
   display: inline-block;
   transition: width 0.3s ease-in-out;
