--- a/src/components/Projects/components/project-card.css
+++ b/src/components/Projects/components/project-card.css
@@ -16,6 +16,7 @@
   overflow: hidden;
   position: relative;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+cursor:pointer;
 }
 
 .project-card::after {
